--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
     <!-- CSS -->
     <link href="https://cdn.jsdelivr.net/npm/flatifycss/dist/css/flatify.min.css" rel="stylesheet"
         crossorigin="anonymous" />
+    <script defer data-domain="obrazki.netlify.app" src="https://analytics.chatspell.co/js/script.js"></script>
+
 </head>
 
 <body>
